Reserva asociada usuario. // mostrar reserva por ususario, filtro por email

--- a/casaberriel-frontend/src/main/resources/templates/admin.html
+++ b/casaberriel-frontend/src/main/resources/templates/admin.html
@@ -123,7 +123,7 @@
 			    </tbody>
 			</table>
 
-			<a href="/reservas/index" class="btn btn-primary mt-4">Volver</a>
+			<a href="/reservas/index" class="btn btn-primary mt-4">Salir</a>
 		</div>
 
 
