--- a/casaberriel-frontend/src/main/resources/templates/componentes/_nav.html
+++ b/casaberriel-frontend/src/main/resources/templates/componentes/_nav.html
@@ -29,7 +29,7 @@
 				    </a>
 				    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
 				        <a sec:authorize="hasRole('ROLE_USER')" class="dropdown-item" th:href="@{/registro/detalle-usuario}">Perfil</a>
-				        <a sec:authorize="hasRole('ROLE_USER')" class="dropdown-item" href="/profile">Mi reserva</a>
+						<a sec:authorize="hasRole('ROLE_USER')" class="dropdown-item" href="/reservas/miReserva/">Mi reserva</a>
 				        <a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" href="/admin/lista">Panel de administración</a>
 				        <div class="dropdown-divider"></div>
 				        <a class="dropdown-item logout-button" href="/logout">Logout</a>
