--- a/casaberriel-frontend/src/main/resources/templates/index.html
+++ b/casaberriel-frontend/src/main/resources/templates/index.html
@@ -62,17 +62,52 @@
 					<span th:text="${username}"></span>
 					<div th:if="${disponible}">
 						<div class="card">
+							<input type="hidden" id="isUserLoggedIn" th:value="${isUserLoggedIn}">
 							<div class="alert alert-success" role="alert">
 								<h4 class="alert-heading">Disponible</h4>
 								<span>La casa está disponible para las fechas seleccionadas,  <span th:text="${#httpServletRequest.remoteUser}"></span></span>
 								<hr>
-								
-								<a th:href="@{/reservas/lista(fechaEntrada=${fechaEntradaFormateada}, fechaSalida=${fechaSalidaFormateada})}" class="btn btn-primary mt-3">Reservar</a>
+								<button class="btn btn-primary mt-3" id="botonReservar" onclick="handleReservar()">Reservar</button>
+
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<!-- Login Modal -->
+			<div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true"
+			    th:classappend="${error} ? 'show' : ''">
+			    <div class="modal-dialog">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <h5 class="modal-title" id="loginModalLabel">Para reservar inicia sesión o registrate</h5>
+			                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			            </div>
+			            <div class="modal-body">
+			                <form th:action="@{/autenticacionUsusario}" method="POST">
+			                    <div id="error" class="alert alert-danger" style="display: none;"></div>
+
+			                    <div class="form-group">
+			                        <label for="email">Email</label>
+			                        <input type="text" id="email" name="username" class="form-control"
+			                            placeholder="Ingresa tu email">
+			                    </div>
+			                    <div class="form-group">
+			                        <label for="password">Contraseña</label>
+			                        <input type="password" id="password" name="password" class="form-control"
+			                            placeholder="Ingresa tu contraseña">
+			                    </div>
+			                    <button type="submit" class="btn btn-primary btn-block">Iniciar Sesión</button>
+			                    <span>Si no estás registrado, <a th:href="@{/registro/inicio}">Regístrate aquí</a></span>
+			                </form>
+			            </div>
+			            <div class="modal-footer">
+			                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+			            </div>
+			        </div>
+			    </div>
+			</div>
+
 		</section>
 		
 		<!-- About Section -->
