Fix comprobar disponibilidad, no permitir elegir fechas pasadas

--- a/casaberriel-frontend/src/main/resources/templates/reservas.html
+++ b/casaberriel-frontend/src/main/resources/templates/reservas.html
@@ -80,10 +80,14 @@
 									th:value="${fechaSalida}" readonly>
 							</div>
 						</div>
-
-						<div class="row mt-4 pt-4">
-							<div class="col text-center">
-								<button type="submit" class="btn btn-primary">Enviar</button>
+						<div class="row justify-content-center">
+							<!-- Botón Volver -->
+							<div class="col-auto">
+								<a href="/reservas/index" class="btn btn-primary">Volver</a>
+							</div>
+							<!-- Botón Enviar -->
+							<div class="col-auto">
+								<button type="submit" class="btn btn-success">Enviar</button>
 							</div>
 						</div>
 						<!-- Mensaje de éxito -->
