--- a/casaberriel-backend/.settings/org.eclipse.wst.common.component
+++ b/casaberriel-backend/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,8 @@
         <wb-resource deploy-path="/" source-path="/src/main/java"/>
                 
         <wb-resource deploy-path="/" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/target/generated-sources/annotations"/>
+        <wb-resource deploy-path="/" source-path="/target/generated-test-sources/test-annotations"/>
                 
         <dependent-module deploy-path="/" handle="module:/resource/casaberriel-frontend/casaberriel-frontend">
                         
