--- a/casaberriel-frontend/src/main/resources/templates/index.html
+++ b/casaberriel-frontend/src/main/resources/templates/index.html
@@ -191,36 +191,38 @@
 
 		<!-- Contact Section -->
 		<section id="contact" class="bg-light py-5">
-			<div class="container">
-				<h2 class="text-center" data-i18n="contact.title"></h2>
-				<p class="text-center" data-i18n="contact.subtitle"></p>
-				<div class="row">
-					<div class="col-md-6">
-						<h4 data-i18n="contact.address"></h4>
-						<p data-i18n="contact.address_desc"></p>
-						<h4 data-i18n="contact.phone_title"></h4>
-						<p data-i18n="contact.phone"></p>
-						<h4 data-i18n="contact.email"></h4>
-						<p>info@casaberriel.com</p>
-					</div>
-					<div class="col-md-6">
-						<h4 data-i18n="contact.send_message"></h4>
-						<form>
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Tu Nombre">
-							</div>
-							<div class="form-group">
-								<input type="email" class="form-control" placeholder="Tu Email">
-							</div>
-							<div class="form-group">
-								<textarea class="form-control" rows="4" placeholder="Tu Mensaje"></textarea>
-							</div>
-							<button type="submit" class="btn btn-primary">Enviar</button>
-						</form>
-					</div>
-				</div>
-			</div>
+		    <div class="container">
+		        <h2 class="text-center" data-i18n="contact.title"></h2>
+		        <p class="text-center" data-i18n="contact.subtitle"></p>
+		        <div class="row">
+		            <div class="col-md-6">
+		                <h4 data-i18n="contact.address"></h4>
+		                <p data-i18n="contact.address_desc"></p>
+		                <h4 data-i18n="contact.phone_title"></h4>
+		                <p data-i18n="contact.phone"></p>
+		                <h4 data-i18n="contact.email"></h4>
+		                <p>info@casaberriel.com</p>
+		            </div>
+		            <div class="col-md-6">
+		                <h4 data-i18n="contact.send_message"></h4>
+		                <form id="contactForm" th:action="@{/api/send-email}" method="POST">
+		                    <div class="form-group">
+		                        <input type="text" class="form-control" placeholder="Tu Nombre" id="name" required>
+		                    </div>
+		                    <div class="form-group">
+		                        <input type="email" class="form-control" placeholder="Tu Email" id="email" required>
+		                    </div>
+		                    <div class="form-group">
+		                        <textarea class="form-control" rows="4" placeholder="Tu Mensaje" id="message" required></textarea>
+		                    </div>
+		                    <button type="submit" class="btn btn-primary" id="contactFormBtn">Enviar</button>
+		                </form>
+		              
+		            </div>
+		        </div>
+		    </div>
 		</section>
+
 
 
 		<div class="container mt-5">
