Editar reservas // ajustes maquetados

--- a/casaberriel-frontend/src/main/resources/templates/componentes/_nav.html
+++ b/casaberriel-frontend/src/main/resources/templates/componentes/_nav.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container-fluid">
 		<!-- "CASA BERRIEL" a la izquierda -->
-		<a class="navbar-brand" href="/reservas/index">CASA BERRIEL</a>
+		<a class="navbar-brand" href="/reservas/index">Casa Berriel</a>
 
 		<!-- Botón de despliegue para dispositivos móviles -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
