--- a/casaberriel-frontend/src/main/resources/static/css/styles.css
+++ b/casaberriel-frontend/src/main/resources/static/css/styles.css
@@ -3,173 +3,242 @@
 
 /* Banner Styles */
 .banner {
-    background: url('../images/lago_verde.jpg') no-repeat center center/cover;
-    height: 70vh;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+	background: url('../images/lago_verde.jpg') no-repeat center center/cover;
+	height: 70vh;
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
 
 .banner h1 {
-    font-size: 3rem;
-    font-weight: bold;
+	font-size: 3rem;
+	font-weight: bold;
 }
 
 .banner p {
-    font-size: 1.2rem;
+	font-size: 1.2rem;
 }
 
 .banner .btn {
-    font-size: 1.2rem;
+	font-size: 1.2rem;
 }
+
 
 /* Section Padding */
 section {
-    padding: 60px 0;
+	padding: 60px 0;
 }
 
 #services i {
-    color: #007bff;
-    margin-bottom: 15px;
+	color: #007bff;
+	margin-bottom: 15px;
 }
 
 
 footer {
-    background: #343a40;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+	background: #343a40;
+	color: #fff;
+	text-align: center;
+	padding: 1em 0;
+	position: relative;
+	bottom: 0;
+	width: 100%;
 }
+
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+
 }
 
 .container {
-    flex: 1;
+	flex: 1;
 }
 
 #gallery .carousel-item img {
-    height: 700px; /* Altura fija para las imágenes */
-    object-fit: cover; /* Ajusta la imagen para que cubra el contenedor */
-    width: 100%; /* El ancho siempre ocupará el 100% del contenedor */
-    border-radius: 5px;
+	height: 700px;
+	/* Altura fija para las imágenes */
+	object-fit: cover;
+	/* Ajusta la imagen para que cubra el contenedor */
+	width: 100%;
+	/* El ancho siempre ocupará el 100% del contenedor */
+	border-radius: 5px;
 }
 
-html, body {
-    overflow-x: hidden;
+html,
+body {
+	overflow-x: hidden;
 }
 
 
 #btnSubir {
-    display: none; /* Inicialmente oculto */
-    position: fixed; /* Posición fija */
-    bottom: 20px; /* 20px desde la parte inferior */
-    right: 30px; /* 30px desde el lado derecho */
-    z-index: 99; /* Asegura que esté por encima de otros elementos */
-    font-size: 30px;
-    border: none;
-    outline: none;
-    background-color: #408080; /* Color de fondo */
-    color: white; /* Color del texto */
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 10px;
+	display: none;
+	/* Inicialmente oculto */
+	position: fixed;
+	/* Posición fija */
+	bottom: 20px;
+	/* 20px desde la parte inferior */
+	right: 30px;
+	/* 30px desde el lado derecho */
+	z-index: 99;
+	/* Asegura que esté por encima de otros elementos */
+	font-size: 30px;
+	border: none;
+	outline: none;
+	background-color: #408080;
+	/* Color de fondo */
+	color: white;
+	/* Color del texto */
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 10px;
 }
 
 #btnSubir:hover {
-    background-color: #8000ff; /* Color cuando se pasa el ratón por encima */
+	background-color: #8000ff;
+	/* Color cuando se pasa el ratón por encima */
 }
 
-#datepick{
-  width: auto;
-  margin-left: 40%;
-  margin-top: 2%;
+#datepick {
+	width: auto;
+	margin-left: 40%;
+	margin-top: 2%;
 }
+
 h2.text-center {
-    font-size: 2rem;
-    font-weight: bold;
+	font-size: 2rem;
+	font-weight: bold;
 }
 
 #comprobar-disponibilidad-form {
-    padding: 20px;
-    background-color: #80ffff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	padding: 20px;
+	background-color: #80ffff;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .row {
-    margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .input-group {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 #comprobar-disponibilidad-formBtn {
-    padding: 10px 20px;
-    font-size: 1.2rem;
+	padding: 10px 20px;
+	font-size: 1.2rem;
 }
 
 .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+	background-color: #007bff;
+	border-color: #007bff;
 }
 
 .btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+	background-color: #0056b3;
+	border-color: #0056b3;
 }
+
 .datepicker {
-    min-width: 400px;  /* Ajustar el tamaño del contenedor */
-    font-size: 1rem; /* Aumenta el tamaño de la fuente del calendario */
+	min-width: 400px;
+	/* Ajustar el tamaño del contenedor */
+	font-size: 1rem;
+	/* Aumenta el tamaño de la fuente del calendario */
 }
 
 
 .datepicker-days table {
-    width: 100%;
-    height: auto;
-    font-size: 1rem; /* Aumenta el tamaño de los números de los días */
+	width: 100%;
+	height: auto;
+	font-size: 1rem;
+	/* Aumenta el tamaño de los números de los días */
 }
 
-.datepicker .day, .datepicker .month, .datepicker .year {
-    padding: 4px;
-    width: 40px;
-    height: 40px;
+.datepicker .day,
+.datepicker .month,
+.datepicker .year {
+	padding: 4px;
+	width: 40px;
+	height: 40px;
 }
 
-.datepicker table tr td, .datepicker table tr th {
-    width: 40px;
-    height: 40px;
-    text-align: center;
+.datepicker table tr td,
+.datepicker table tr th {
+	width: 40px;
+	height: 40px;
+	text-align: center;
 }
 
 /* Ajustar el tamaño del header del calendario */
 .datepicker .datepicker-switch,
 .datepicker .prev,
 .datepicker .next {
-    font-size: 1.5rem; /* Aumenta el tamaño de los botones de navegación */
-    padding: 10px;
+	font-size: 1.5rem;
+	/* Aumenta el tamaño de los botones de navegación */
+	padding: 10px;
 }
 
 /* Cambiar el tamaño de los botones del selector de mes y año si es necesario */
-.datepicker-months .month, 
+.datepicker-months .month,
 .datepicker-years .year {
-    font-size: 1.5rem; /* Aumentar el tamaño de los meses/años */
-    padding: auto;
+	font-size: 1.5rem;
+	/* Aumentar el tamaño de los meses/años */
+	padding: auto;
 }
 
 .logout-button {
-    color: inherit; /* Mantiene el color original */
+	color: inherit;
+	/* Mantiene el color original */
 }
 
 .logout-button:hover {
-   color: red; /* Cambia el color a rojo al pasar el ratón */
+	color: red;
+	/* Cambia el color a rojo al pasar el ratón */
 }
 
+
+.card {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border: 1px solid #dee2e6;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+}
+
+#card_edit_rva {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border: 1px solid #dee2e6;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	width: 700px;
+	  align-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+.card-header {
+
+	padding: 10px 15px;
+	font-size: 1.25rem;
+	font-weight: bold;
+	background-color: #e2e2e2;
+
+
+}
+
+.card-body {
+	padding: 20px;
+}
+
+.table th,
+.table td {
+	vertical-align: middle;
+}
