ajustes en envio de correos usuarios y reservas

--- a/casaberriel-frontend/src/main/resources/templates/UsuarioConfirmacion.html
+++ b/casaberriel-frontend/src/main/resources/templates/UsuarioConfirmacion.html
@@ -124,10 +124,10 @@
 			<p th:if="${cancelada}">Su cuenta de usuario ha sido cancelada:</p>
 
 			<div class="details" th:if="${!cancelada}">
-				<p>Nombre <span class="highlight" th:text="${nombreCliente}"></span></p>
-				<p>Apellidos<span class="highlight" th:text="${apellidos}"></span></p>
-				<p>Dirección<span class="highlight" th:text="${direccion}"></span></p>
-				<p>Email<span class="highlight" th:text="${email}"></span></p>
+				<p>Nombre: <span class="highlight" th:text="${nombreCliente}"></span></p>
+				<p>Apellidos: <span class="highlight" th:text="${apellidos}"></span></p>
+				<p>Dirección: <span class="highlight" th:text="${direccion}"></span></p>
+				<p>Email: <span class="highlight" th:text="${email}"></span></p>
 				
 
 			</div>
