--- a/casaberriel-frontend/src/main/resources/templates/miReserva.html
+++ b/casaberriel-frontend/src/main/resources/templates/miReserva.html
@@ -15,7 +15,7 @@
 
 	<div class="container">
 		<h1 class="my-4">Mi reserva</h1>
-
+		
 		<table class="table table-striped table-hover">
 			<thead class="thead-dark">
 				<tr>
@@ -61,10 +61,19 @@
 							</svg></a> </td>	
 				</tr>
 			</tbody>
+			
 		</table>
-		<div th:if="${message}" class="alert alert-success" role="alert">
-			<span th:text="${message}"></span>
+		<div th:if="${message}" class="alert alert-success" role="alert" id="message">
+					<span th:text="${message}"></span>
+				</div>
+		<div th:if="${#lists.isEmpty(reserva)}" class="alert alert-info" role="alert">
+			No hay reservas para mostrar.
 		</div>
+		
+		      <!-- Botón de Nueva Reserva -->
+			  <div class="text-center mt-4">
+				<a href="/reservas/formReserva" class="btn btn-primary">Nueva Reserva</a>
+			</div>
 	</div>
 	<th:block th:include="componentes/_scripts.html"></th:block>
 	<script>
@@ -77,7 +86,7 @@
 			}
 		});
 		
-	</script>
+    </script>
 
 
 </body>
