Implementación textos intenacionalizacion y maquetado

--- a/casaberriel-frontend/src/main/resources/templates/componentes/_head.html
+++ b/casaberriel-frontend/src/main/resources/templates/componentes/_head.html
@@ -9,10 +9,13 @@
     <meta content="" name="description">
     <!-- Favicon 
     <link th:href="@{img/favicon.ico}" rel="icon">-->
+	<link rel="shortcut icon" href="/images/icon.jpg">
    
-     <link rel="shortcut icon" href="@{images/icon.jpg}">
     <!-- Google Web Fonts -->
-    <link th:href="@{lib/google/fonts.googleapis.com.css}" rel="stylesheet">
+   
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Icon Font Stylesheet -->
     <!-- Icon Font Stylesheet -->
     <link th:href="@{lib/bootstrap/css/font-awesome_5.10.0_css_all.min.css}" rel="stylesheet">
