--- a/casaberriel-frontend/src/main/resources/templates/reservaConfirmacion.html
+++ b/casaberriel-frontend/src/main/resources/templates/reservaConfirmacion.html
@@ -122,7 +122,7 @@
 			<p th:if="${!modificada and !cancelada}">¡Gracias por confiar en Casa Berriel para su estancia! Nos complace
 				confirmar su reserva con los siguientes detalles:</p>
 			<p th:if="${cancelada}">Su reserva ha sido cancelada:</p>
-			<p>Referencia reserva:<span class="highlight" th:text="${idReserva}"></span></p><br
+			<p>Referencia reserva:<span class="highlight" th:text="${idReserva}"></span></p><br>
 			<p>¡Le esperamos pronto en Casa Berriel!</p>
 
 			<div class="details" th:if="${!cancelada}">
