--- a/casaberriel-frontend/src/main/resources/templates/componentes/_nav.html
+++ b/casaberriel-frontend/src/main/resources/templates/componentes/_nav.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-	<link rel="shortcut icon" href="images/icon.jpg">
+
 	<!-- Head Start -->
 	<th:block th:include="componentes/_head.html"></th:block>
 	<!-- Head End -->
@@ -11,7 +11,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container-fluid">
 		<!-- "CASA BERRIEL" a la izquierda -->
-		<a class="navbar-brand" href="/reservas/index">Casa Berriel</a>
+		
+
+		<a class="navbar-brand inicio" href="/reservas/index">
+		    <img src="/images/icon.jpg" alt="Casa Berriel Icon" style="height: 30px; margin-right: 10px;">
+		    Casa Berriel - Lanzarote
+		</a>
 
 		<!-- Botón de despliegue para dispositivos móviles -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -24,30 +29,37 @@
 			<ul class="navbar-nav ms-auto">
 				<!-- Dropdown para usuario autenticado -->
 				<li th:if="${#httpServletRequest.remoteUser != null}" class="nav-item dropdown">
-				    <a class="nav-link dropdown-toggle" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				        <span th:text="${#httpServletRequest.remoteUser}">Usuario</span>
-				    </a>
-				    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-				        <a sec:authorize="hasRole('ROLE_USER')" class="dropdown-item" th:href="@{/registro/detalle-usuario}">Perfil</a>
-						<a sec:authorize="hasRole('ROLE_USER')" class="dropdown-item" href="/reservas/miReserva/">Mi reserva</a>
-				        <a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" href="/admin/lista">Panel de administración</a>
-				        <div class="dropdown-divider"></div>
-				        <a class="dropdown-item logout-button" href="/logout">Logout</a>
-				    </div>
+					<a class="nav-link dropdown-toggle" id="userDropdown" role="button" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">
+						<span th:text="${#httpServletRequest.remoteUser}">Usuario</span>
+					</a>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+						<a sec:authorize="hasRole('ROLE_USER')" class="dropdown-item"
+							th:href="@{/registro/detalle-usuario}" data-i18n="navbar.profile"></a>
+						<a sec:authorize="hasRole('ROLE_USER')" class="dropdown-item" href="/reservas/miReserva/"
+							data-i18n="navbar.mybookings"></a>
+						<a sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown-item" href="/admin/lista">Panel de
+							administración</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item logout-button" href="/logout" data-i18n="navbar.logout"></a>
+					</div>
+				</li>
+				<!-- Opciones de menú -->
+				<li class="nav-item">
+					<a class="nav-link" href="/reservas/index/#form" data-i18n="navbar.booking"></a>
 				</li>
 
-
 				<li class="nav-item">
-					<a class="nav-link" href="/reservas/index/#about" data-i18n="navbar.about">Sobre Nosotros</a>
+					<a class="nav-link" href="/reservas/index/#about" data-i18n="navbar.about"></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/reservas/index/#services" data-i18n="services.title">Servicios</a>
+					<a class="nav-link" href="/reservas/index/#services" data-i18n="services.title"></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/reservas/index/#gallery" data-i18n="navbar.gallery">Galería</a>
+					<a class="nav-link" href="/reservas/index/#gallery" data-i18n="navbar.gallery"></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/reservas/index/#contact" data-i18n="navbar.contact">Contacto</a>
+					<a class="nav-link" href="/reservas/index/#contact" data-i18n="navbar.contact"></a>
 				</li>
 
 				<!-- Opción de Login si el usuario no está autenticado -->
@@ -57,11 +69,12 @@
 				</li>
 
 				<!-- Selector de idioma -->
+				
 				<li class="nav-item">
-					<select id="languageSelector" class="form-control">
-						<option value="es">Español</option>
-						<option value="en">English</option>
-					</select>
+				    <select id="languageSelector" class="form-control">
+				        <option value="es" > <img src="/images/spain.png" alt="Spanish" class="flag-icon"> Español</option>
+				        <option value="en" data-icon="../images/uk.png">English</option>
+				    </select>
 				</li>
 			</ul>
 
@@ -72,7 +85,7 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title" id="loginModalLabel">Iniciar Sesión</h5>
+						<h5 class="modal-title" id="loginModalLabel" data-i18n="login.title"></h5>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
@@ -87,16 +100,18 @@
 									placeholder="Ingresa tu email">
 							</div>
 							<div class="form-group">
-								<label for="password">Contraseña</label>
+								<label for="password" data-i18n="login.password_placeholder"></label>
 								<input type="password" id="password" name="password" class="form-control"
 									placeholder="Ingresa tu contraseña">
 							</div>
-							<button type="submit" class="btn btn-primary btn-block">Iniciar Sesión</button>
-							<span>Si no estás registrado, <a th:href="@{/registro/inicio}">Regístrate aquí</a></span>
+							<button type="submit" class="btn btn-primary btn-block" data-i18n="login.title"></button>
+							<span>Si no estás registrado, <a th:href="@{/registro/inicio}"
+									data-i18n="login.register"></a></span>
 						</form>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal"
+							data-i18n="navbar.logout"></button>
 					</div>
 				</div>
 			</div>
@@ -109,14 +124,13 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title" id="logoutConfirmModalLabel">Confirmación de Cierre de Sesión</h5>
+						<h5 class="modal-title" id="logoutConfirmModalLabel" data-i18n="common.close_title"></h5>
 					</div>
-					<div class="modal-body">
-						¿Estás seguro de que deseas cerrar sesión?
-					</div>
+					<div class="modal-body" data-i18n="common.close_confirm"></div>
 					<div class="modal-footer">
 						<!-- Este botón debería cerrar el modal automáticamente -->
-						<button type="button" id="confirmLogoutBtn" class="btn btn-danger">Cerrar Sesión</button>
+						<button type="button" id="confirmLogoutBtn" class="btn btn-danger"
+							data-i18n="common.close_session"></button>
 					</div>
 				</div>
 			</div>
