--- a/casaberriel-frontend/src/main/resources/templates/editar_reserva.html
+++ b/casaberriel-frontend/src/main/resources/templates/editar_reserva.html
@@ -11,15 +11,15 @@
 <body>
 	<div class="container">
 		<div class="card" id="card_edit_rva">
-			<div class="card-header">Editar Reserva</div>
+			<div class="card-header" data-i18n="form.edit_booking"></div>
 			<div class="card-body">
 				<form th:action="@{'/reservas/editar/' + ${reserva.id}}" th:object="${reserva}" method="post">
 					<div class="form-group">
-						<label for="nombre">Nombre</label>
+						<label for="nombre" data-i18n="form.name"></label>
 						<input type="text" id="nombre" class="form-control" th:field="*{nombre}" required>
 					</div>
 					<div class="form-group">
-						<label for="apellidos">Apellidos</label>
+						<label for="apellidos" data-i18n="form.surname"></label>
 						<input type="text" id="apellidos" class="form-control" th:field="*{apellidos}" required>
 					</div>
 					<div class="form-group">
@@ -27,42 +27,42 @@
 						<input type="email" id="email" class="form-control" th:field="*{email}" required readonly>
 					</div>
 					<div class="form-group">
-						<label for="direccion">Dirección</label>
+						<label for="direccion" data-i18n="form.address"></label>
 						<input type="text" id="direccion" class="form-control" th:field="*{direccion}" required>
 					</div>
 					<div class="form-group">
-						<label for="numPersonas" class="form-label">Número de Personas</label>
+						<label for="numPersonas" class="form-label" data-i18n="form.number"></label>
 						<input type="number" class="form-control" id="numPersonas" name="numPersonas" min="1" max="5"
 						 th:field="*{numPersonas}"	required>
 					</div>
 
 					<div class="form-group">
-						<label for="fechaEntrada">Fecha de Entrada</label>
+						<label for="fechaEntrada" data-i18n="form.arrival"></label>
 						<input type="text" id="fechaEntrada" class="form-control" th:field="*{fechaEntrada}" required>
 					</div>
 					<div class="form-group">
-						<label for="fechaSalida">Fecha de Salida</label>
+						<label for="fechaSalida" data-i18n="form.departure"></label>
 						<input type="text" id="fechaSalida" class="form-control" th:field="*{fechaSalida}" required>
 					</div>
 					<div class="form-group">
-						<label for="observaciones">Observaciones</label>
+						<label for="observaciones" data-i18n="form.observations"></label>
 						<textarea id="observaciones" class="form-control" cols="30" rows="4"
 							th:field="*{observaciones}"></textarea>
 					</div>
 					<div class="form-group">
-						<label for="precioTotal">Total</label>
+						<label for="precioTotal" data-i18n="form.total_price"></label>
 						<input type="number" id="precioTotal" class="form-control" th:field="*{precioTotal}" required
 							readonly>
 					</div>
 					<input type="hidden" name="modificada" value="true">
 					<div class="text-center mt-4">
-						<button type="submit" class="btn btn-success">Guardar Cambios</button>
+						<button type="submit" class="btn btn-success" data-i18n="form.save"></button>
 						<a th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" href="/admin/lista"
-							class="btn btn-danger">Cancelar</a>
+							class="btn btn-danger" data-i18n="common.cancel"></a>
 
 						<!-- Botón para el rol USER -->
 						<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/reservas/miReserva"
-							class="btn btn-danger">Cancelar</a>
+							class="btn btn-danger"  data-i18n="common.cancel"></a>
 					</div><br>
 					<div th:if="${message}" class="alert alert-success" role="alert">
 						<span th:text="${message}"></span>
@@ -71,11 +71,11 @@
 					<div class="text-center mt-4">
 						<!-- Botón para el rol ADMIN -->
 						<a th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" href="/admin/lista"
-							class="btn btn-primary mt-4">Volver</a>
+							class="btn btn-primary mt-4"  data-i18n="common.back"></a>
 
 						<!-- Botón para el rol USER -->
 						<a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" href="/reservas/miReserva"
-							class="btn btn-primary mt-4">Volver</a>
+							class="btn btn-primary mt-4"  data-i18n="common.back"></a>
 					</div>
 
 				</form>
