--- a/casaberriel-frontend/src/main/resources/templates/email.html
+++ b/casaberriel-frontend/src/main/resources/templates/email.html
@@ -77,7 +77,7 @@
             <p>¡Mensaje de <strong th:text="${name}"></strong>!</p>
             <p>Correo Electrónico: <strong th:text="${email}"></strong></p>
             <div class="message-box">
-                <p th:text="${message}" style="font-style: italic;"></p>
+                <p th:text="${messages}" style="font-style: italic;"></p>
             </div>
         </div>
 
