--- a/casaberriel-frontend/src/main/resources/templates/admin.html
+++ b/casaberriel-frontend/src/main/resources/templates/admin.html
@@ -2,145 +2,145 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Panel de administración</title>
-    <th:block th:include="componentes/_head.html"></th:block>
+	<meta charset="UTF-8">
+	<title>Panel de administración</title>
+	<th:block th:include="componentes/_head.html"></th:block>
 </head>
 
 <body>
-    <th:block th:include="componentes/_nav.html"></th:block>
-    <div class="container mt-4">
-        <!-- Panel de administración -->
-        <h3 class="text-center mb-4">PANEL DE ADMINISTRACIÓN</h3>
+	<th:block th:include="componentes/_nav.html"></th:block>
+	<div class="container">
+		<!-- Panel de administración -->
+		<h3 class="text-center mb-4" data-i18n="common.panel"></h3>
 
-        <!-- Card de Reservas -->
-        <div class="card">
-            <div class="card-header">Lista de Reservas</div>
-            <div class="card-body">
-                <table class="table table-striped table-hover">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">ID</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Apellidos</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Dirección</th>
-                            <th scope="col">Fecha de Entrada</th>
-                            <th scope="col">Fecha de Salida</th>
-                            <th scope="col">Total</th>
-                            <th scope="col">Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="reserva : ${reservas}">
-                            <td th:text="${reserva.id}"></td>
-                            <td th:text="${reserva.nombre}"></td>
-                            <td th:text="${reserva.apellidos}"></td>
-                            <td th:text="${reserva.email}"></td>
-                            <td th:text="${reserva.direccion}"></td>
-                            <td th:text="${#dates.format(reserva.fechaEntrada, 'dd/MM/yyyy')}"></td>
-                            <td th:text="${#dates.format(reserva.fechaSalida, 'dd/MM/yyyy')}"></td>
-                            <td th:text="${reserva.precioTotal}"></td>
-                            <td>
-                                <a class="btn btn-outline-success" title="Editar Reserva"
-                                    th:href="@{'/reservas/editar/' + ${reserva.id}}">
-                                    <i class="bi bi-pencil"></i>
-                                </a>
-                                <a class="btn btn-outline-danger deleteReservaBtn" title="Eliminar Reserva"
-                                    th:href="@{'/reservas/delete/' + ${reserva.id}}" data-toggle="modal"
-                                    th:attr="data-target='#deleteModal' + ${reserva.id}" data-target="#deleteModal"
-                                    data-id="${reserva.id}">
-                                    <i class="bi bi-trash3"></i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-									fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
-									<path
-										d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
-								</svg>
-                                </a>
-                                <a title="Ver Reserva" class="btn btn-outline-info"
-                                    th:href="@{'/reservas/detalle/' + ${reserva.id}}">
-                                    <i class="bi bi-eye"></i>
-                                </a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+		<!-- Card de Reservas -->
+		<div class="card">
+			<div class="card-header">Lista de Reservas</div>
+			<div class="card-body table-responsive">
+				<table class="table table-striped table-hover">
+					<thead class="thead-dark">
+						<tr>
+							<th scope="col" data-i18n="form.id"></th>
+							<th scope="col" data-i18n="form.name"></th>
+							<th scope="col" data-i18n="form.surname"></th>
+							<th scope="col">Email</th>
+							<th scope="col" data-i18n="form.address"></th>
+							<th scope="col" data-i18n="form.arrival"></th>
+							<th scope="col" data-i18n="form.departure"></th>
+							<th scope="col" data-i18n="form.total_price"></th>
+							<th scope="col" data-i18n="form.accions"></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="reserva : ${reservas}">
+							<td th:text="${reserva.id}"></td>
+							<td th:text="${reserva.nombre}"></td>
+							<td th:text="${reserva.apellidos}"></td>
+							<td th:text="${reserva.email}"></td>
+							<td th:text="${reserva.direccion}"></td>
+							<td th:text="${#dates.format(reserva.fechaEntrada, 'dd/MM/yyyy')}"></td>
+							<td th:text="${#dates.format(reserva.fechaSalida, 'dd/MM/yyyy')}"></td>
+							<td th:text="${reserva.precioTotal}"></td>
+							<td>
+								<a class="btn btn-outline-success" title="Editar Reserva"
+									th:href="@{'/reservas/editar/' + ${reserva.id}}">
+									<i class="bi bi-pencil"></i>
+								</a>
+								<a class="btn btn-outline-danger deleteReservaBtn" title="Eliminar Reserva"
+									th:href="@{'/reservas/delete/' + ${reserva.id}}" data-toggle="modal"
+									th:attr="data-target='#deleteModal' + ${reserva.id}" data-target="#deleteModal"
+									data-id="${reserva.id}">
+									<i class="bi bi-trash3"></i><svg xmlns="http://www.w3.org/2000/svg" width="16"
+										height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+										<path
+											d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
+									</svg>
+								</a>
+								<a title="Ver Reserva" class="btn btn-outline-info"
+									th:href="@{'/reservas/detalle/' + ${reserva.id}}">
+									<i class="bi bi-eye"></i>
+								</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 
-        <!-- Modal de Confirmación de Eliminación -->
-        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="deleteModalLabel">Confirmar Eliminación</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">¿Estás seguro de que deseas eliminar esta reserva?</div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        <a id="confirmDeleteButton" href="#" class="btn btn-danger">Eliminar</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div th:if="${message}" class="alert alert-success" role="alert">
-            <span th:text="${message}"></span>
-        </div>
+		<!-- Modal de Confirmación de Eliminación -->
+		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="deleteModalLabel">Confirmar Eliminación</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">¿Estás seguro de que deseas eliminar esta reserva?</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+						<a id="confirmDeleteButton" href="#" class="btn btn-danger">Eliminar</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div th:if="${message}" class="alert alert-success" role="alert">
+			<span th:text="${message}"></span>
+		</div>
 
-        <!-- Card de Usuarios -->
-        <div class="card">
-            <div class="card-header">Detalle de Usuarios</div>
-            <div class="card-body">
-                <table class="table table-striped table-hover">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>ID</th>
-                            <th>Nombre</th>
-                            <th>Apellidos</th>
-                            <th>Email</th>
-                            <th>Contraseña</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="usuario : ${usuario}">
-                            <td th:text="${usuario.id}"></td>
-                            <td th:text="${usuario.nombre}"></td>
-                            <td th:text="${usuario.apellidos}"></td>
-                            <td th:text="${usuario.email}"></td>
-                            <td th:text="${usuario.password}"></td>
-                            <td>
-                                <a class="btn btn-outline-success" title="Editar Usuario"
-                                    th:href="@{'/registro/editar-usuario/' + ${usuario.id}}">
-                                    <i class="bi bi-pencil"></i>
-                                </a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+		<!-- Card de Usuarios -->
+		<div class="card">
+			<div class="card-header">Detalle de Usuarios</div>
+			<div class="card-body table-responsive">
+				<table class="table table-striped table-hover">
+					<thead class="thead-dark">
+						<tr>
+							<th data-i18n="form.userId"></th>
+							<th data-i18n="form.name"></th>
+							<th data-i18n="form.surname"></th>
+							<th>Email</th>
+							<th data-i18n="form.password"></th>
+							<th data-i18n="form.accions"></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="usuario : ${usuario}">
+							<td th:text="${usuario.id}"></td>
+							<td th:text="${usuario.nombre}"></td>
+							<td th:text="${usuario.apellidos}"></td>
+							<td th:text="${usuario.email}"></td>
+							<td th:text="${usuario.password}"></td>
+							<td>
+								<a class="btn btn-outline-success" title="Editar Usuario"
+									th:href="@{'/registro/editar-usuario/' + ${usuario.id}}">
+									<i class="bi bi-pencil"></i>
+								</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 
-        <div class="text-center mt-4">
-            <a href="/reservas/index" class="btn btn-primary">Salir</a>
-        </div>
-    </div>
+		<div class="text-center mt-4">
+			<a href="/reservas/index" class="btn btn-primary" data-i18n="common.exit"></a>
+		</div>
+	</div>
 
-    <th:block th:include="componentes/_scripts.html"></th:block>
-    <th:block th:include="componentes/footer.html"></th:block>
+	<th:block th:include="componentes/_scripts.html"></th:block>
+	<th:block th:include="componentes/footer.html"></th:block>
 
-    <script>
-        $('.deleteReservaBtn').on('click', function (event) {
-            event.preventDefault();
-            var confirmDeletion = confirm('¿Está seguro de que quiere eliminar esta reserva?');
-            if (confirmDeletion) {
-                window.location.href = $(this).attr('href');
-            }
-        });
-    </script>
+	<script>
+		$('.deleteReservaBtn').on('click', function (event) {
+			event.preventDefault();
+			var confirmDeletion = confirm('¿Está seguro de que quiere eliminar esta reserva?');
+			if (confirmDeletion) {
+				window.location.href = $(this).attr('href');
+			}
+		});
+	</script>
 </body>
 
 </html>
