--- a/casaberriel-frontend/src/main/resources/templates/detalle_usuario.html
+++ b/casaberriel-frontend/src/main/resources/templates/detalle_usuario.html
@@ -12,6 +12,9 @@
 	<th:block th:include="componentes/_nav.html"></th:block>
 	<!-- Contenido Principal -->
 	<div class="container mt-5">
+		<div class="text-center mt-4">
+				<h1 class="my-4" data-i18n="form.data"></h1>
+				</div>
 		<div class="card" id="card_edit_rva">
 			<div class="card-header" data-i18n="form.data"></div>
 			<div class="card-body">
@@ -21,7 +24,7 @@
 					th:object="${usuario}">
 					<!-- Nombre -->
 					<div class="mb-3">
-						<label for="nombre" class="form-label"><strong data-i18n="form.data"></strong></label>
+						<label for="nombre" class="form-label"><strong data-i18n="form.name"></strong></label>
 						<input type="text" id="nombre" name="nombre" class="form-control" th:field="*{nombre}" required>
 					</div>
 
