--- a/casaberriel-frontend/src/main/resources/templates/miReserva.html
+++ b/casaberriel-frontend/src/main/resources/templates/miReserva.html
@@ -14,11 +14,13 @@
 	<th:block th:include="componentes/_nav.html"></th:block>
 
 	<div class="container">
+		<div class="text-center mt-4">
 		<h1 class="my-4" data-i18n="navbar.mybookings"></h1>
+		</div>
 
 		<div class="card">
-			<div class="card-header">Lista de Reservas</div>
-			<div class="card-body">
+			<div class="card-header">Datos de la reserva</div>
+			<div class="card-body table-responsive">
 				<table class="table table-striped table-hover">
 					<thead class="thead-dark">
 						<tr>
