ajustes de maquetación forms recuperar password// fix tipo de dato id reserva

--- a/casaberriel-backend/src/main/resources/templates/index.html
+++ b/casaberriel-backend/src/main/resources/templates/index.html
@@ -111,7 +111,7 @@
 									placeholder="Ingresa tu contraseña">
 							</div>
 							<button type="submit" class="btn btn-primary btn-block" data-i18n="navbar.login"></button>
-							<spa data-i18n="form.register"><a th:href="@{/registro/inicio}"></a></span>
+							<span data-i18n="form.register"></span><span><a th:href="@{/registro/inicio}" data-i18n="form.here"></a></span>
 						</form>
 					</div>
 					<div class="modal-footer">
