--- a/casaberriel-backend/src/main/resources/templates/componentes/_nav.html
+++ b/casaberriel-backend/src/main/resources/templates/componentes/_nav.html
@@ -105,20 +105,14 @@
 									placeholder="Ingresa tu contraseña">
 							</div>
 
-							<span>Si no estás registrado, <a th:href="@{/registro/inicio}"
-									data-i18n="login.register"></a></span>
-							<div class="text-center mt-4">
-								<a href="/reservas/recuperarPassword" class="btn btn-primary"
-									data-i18n="login.forgot_password"></a>
+							<span data-i18n="form.register"></span><span><a th:href="@{/registro/inicio}" data-i18n="form.here"></a></span>
+							<div class="d-flex justify-content-between align-items-center mt-4">
+								<button type="submit" class="btn btn-success" data-i18n="login.title"></button>
+								<a href="/reservas/recuperarPassword" data-i18n="login.forgot_password"></a>
 							</div>
-							<button type="submit" class="btn btn-success btn-block" data-i18n="login.title"></button>
 						</form>
 					</div>
-					<div class="modal-footer">
-						
-						<button type="button" class="btn btn-danger" data-dismiss="modal"
-							data-i18n="navbar.logout"></button>
-					</div>
+					
 				</div>
 			</div>
 		</div>
