--- a/casaberriel-backend/src/main/resources/templates/newPassword.html
+++ b/casaberriel-backend/src/main/resources/templates/newPassword.html
@@ -12,7 +12,7 @@
 		.banner2 {
 			background: url('../images/lago_verde.jpg') no-repeat center center/cover;
 			height: 85vh;
-			color: white;
+			color: black;
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -23,13 +23,13 @@
 			max-width: 500px;
 			margin: 0 auto;
 			padding: 20px;
-			background-color: rgb(64, 128, 128);
+			background-color: rgb(234, 230, 231);
 			border-radius: 10px;
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 			position: relative;
 		}
 
-		.form-container h1 {
+		.form-container h2 {
 			margin-bottom: 20px;
 			font-size: 2rem;
 			color: #333;
@@ -46,29 +46,6 @@
 			border-radius: 5px;
 			border: 1px solid #ccc;
 		}
-
-		.form-container .btn-primary {
-			width: 100%;
-			padding: 10px;
-			font-size: 1.2rem;
-			border-radius: 5px;
-			background-color: #007bff;
-			border: none;
-		}
-
-		.form-container .btn-primary:hover {
-			background-color: #0056b3;
-		}
-
-		.close-btn {
-			position: absolute;
-			top: 10px;
-			right: 10px;
-			background: none;
-			border: none;
-			font-size: 1.5rem;
-			cursor: pointer;
-		}
 	</style>
 </head>
 
@@ -78,23 +55,25 @@
 	<header class="banner2">
 		<div class="container text-center">
 			<div class="container my-5">
-				<h1 class="text-center">Recuperar Contraseña</h1>
-				<p class="text-center">Introduce tu correo electrónico para recuper
+				<div class="form-container">
+					<h2 class="text-center">Recuperar Contraseña</h2>
+					<div class="text-center">Introduce tu correo electrónico para recuperar tu contraseña.</div>
 					<!-- Formulario de Restablecer Contraseña -->
-				<form th:action="@{/restablecer-password}" method="post">
-					<input type="hidden" name="token" th:value="${token}">
-					<div class="form-group">
-						<label for="nuevaPassword">Nueva Contraseña</label>
-						<input type="password" id="nuevaPassword" name="nuevaPassword" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label for="confirmarPassword">Confirmar Contraseña</label>
-						<input type="password" id="confirmarPassword" name="confirmarPassword" class="form-control"
-							required>
-					</div>
-					<button type="submit" class="btn btn-primary">Restablecer Contraseña</button>
-				</form>
-
+					<form th:action="@{/restablecer-password}" method="post">
+						<input type="hidden" name="token" th:value="${token}">
+						<div class="form-group">
+							<label for="nuevaPassword">Nueva Contraseña</label>
+							<input type="password" id="nuevaPassword" name="nuevaPassword" class="form-control"
+								required>
+						</div>
+						<div class="form-group">
+							<label for="confirmarPassword">Confirmar Contraseña</label>
+							<input type="password" id="confirmarPassword" name="confirmarPassword" class="form-control"
+								required>
+						</div>
+						<button type="submit" class="btn btn-success">Restablecer Contraseña</button>
+					</form>
+				</div>
 			</div>
 		</div>
 	</header>
