--- a/casaberriel-backend/src/main/resources/templates/registro.html
+++ b/casaberriel-backend/src/main/resources/templates/registro.html
@@ -11,46 +11,49 @@
 	<th:block th:include="componentes/_nav.html"></th:block>
 
 	<div class="container">
-		<h1 class="mb-4">Formulario de registro</h1>
-		<div class="card">
+		<h2 class="text-center mt-4" data-i18n="form.register_form"></h2>
+		<div class="card" id="card_edit_rva">
+			<div class="card-header" data-i18n="common.registration"></div>
 			<div class="card-body">
 				<form th:action="@{/registro/nuevo}" method="POST" th:object="${usuario}" id="limpiar">
 					<div class="form-group">
-						<label for="nombre">Nombre</label> <input type="text" name="nombre" class="form-control"
-							id="nombre" placeholder="Ingresa tu nombre">
+						<label for="nombre" data-i18n="form.name"></label> <input type="text" name="nombre"
+							class="form-control" id="nombre">
 					</div>
 
 					<div class="form-group">
-						<label for="apellidos">apellidos</label> <input type="text" name="apellidos"
-							class="form-control" id="apellidos" placeholder="Ingresa tu apellidos">
+						<label for="apellidos" data-i18n="form.surname"></label> <input type="text" name="apellidos"
+							class="form-control" id="apellidos">
 					</div>
 					<div class="form-group">
-						<label for="direccion">direccion</label> <input type="text" name="direccion"
-							class="form-control" id="direccion" placeholder="Ingresa tu direccion">
+						<label for="direccion" data-i18n="form.address"></label> <input type="text" name="direccion"
+							class="form-control" id="direccion">
 					</div>
 					<div class="form-group">
 						<label for="email">Email</label> <input type="text" name="email" class="form-control" id="email"
-							placeholder="Ingresa tu email">
+							placeholder="Email">
 					</div>
 
 					<div class="form-group">
-						<label for="password">Contraseña</label> <input type="password" name="password"
-							class="form-control" id="password" placeholder="Ingresa tu contraseña">
+						<label for="password" data-i18n="form.password"></label> <input type="password" name="password"
+							class="form-control" id="password">
 					</div><br>
-					<button type="submit" class="btn btn-primary">Registrate</button>
+					<button type="submit" class="btn btn-success" data-i18n="common.registration"></button>
 				</form>
-
 			</div>
 		</div>
-		<a href="/reservas/index" class="btn btn-primary mt-4">Volver</a> <br>
-		<div th:if=${param.exito} class="alert alert-info">Bienvenido a
-			Casa Berriel, se ha registrado con exito !
-			<br>
-			<button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#loginModal">
-				Iniciar Sesión
-			</button>
+		<div class="text-center mt-4">
+			<a href="/reservas/index" class="btn btn-primary mt-4" data-i18n="common.back"></a>
 		</div>
-		<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
+	</div>
+
+	<div th:if=${param.exito} class="alert alert-info" data-i18n="common.welcome">
+		<br>
+		<button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#loginModal">
+			Iniciar Sesión
+		</button>
+	</div>
+	<div class="alert alert-danger" th:if="${error}" th:text="${error}"></div>
 	</div>
 	<input type="hidden" name="redirectUrl" th:value="${redirectUrl}">
 	<!-- Modal de Login -->
@@ -74,7 +77,7 @@
 								placeholder="Ingresa tu email">
 						</div>
 						<div class="form-group">
-							<label for="password">Contraseña</label>
+							<label for="password"></label>
 							<input type="password" id="password" name="password" class="form-control"
 								placeholder="Ingresa tu contraseña">
 						</div>
